[package]
name = "exaworld_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exaworld_dependencies = { git = "https://github.com/ariepl/exaworld_dependencies" }
serde = "1.0.188"
serde_json = "1.0.105"
strum = "0.25.0"
strum_macros = "0.25.2"
